--- a/Proposal_Revision/myrefs.bib
+++ b/Proposal_Revision/myrefs.bib
@@ -24,7 +24,7 @@
 	file = {Snapshot:/Users/permar/Library/Application Support/Firefox/Profiles/uepzkl8i.default/zotero/storage/XTJRSTFT/abs_all.html:text/html}
 },
 
-@phdthesis{tanguay_jr_hidden_1995,
+@mastersthesis{tanguay_jr_hidden_1995,
 	title = {Hidden markov models for gesture recognition},
 	url = {http://my-thysis.googlecode.com/svn/Scientific%20Papers/meng.pdf},
 	urldate = {2012-10-29},
@@ -90,4 +90,25 @@
   pages={223--232},
   year={1998},
   publisher={World Scientific}
+},
+
+@techreport{lyddane_donald_united_2006,
+	title = {United States Attorneys' Bulletin},
+	url = {www.justice.gov/archive/olp/pdf/gangs.pdf},
+	institution = {United States Department of Justice Executive Office for United States Attorneys},
+	author = {{{Lyddane}, Donald}},
+	month = may,
+	year = {2006},
+	pages = {63}
+},
+
+@inproceedings{groner_real-time_1966,
+	title = {Real-time recognition of handprinted text},
+	url = {http://dl.acm.org/citation.cfm?id=1464355},
+	urldate = {2012-11-04},
+	booktitle = {Proceedings of the November 7-10, 1966, fall joint computer conference},
+	author = {Groner, G. F.},
+	year = {1966},
+	pages = {591–601},
+	file = {Snapshot:/Users/permar/Library/Application Support/Firefox/Profiles/uepzkl8i.default/zotero/storage/IT5IVTKG/citation.html:text/html}
 }
