Clarified gestures vs. symbols in the problem statement section.

--- a/Proposal_Revision/document.tex
+++ b/Proposal_Revision/document.tex
@@ -92,7 +92,7 @@ solving two problems: segmentation of a gesture sequence and recognition of
 individual gestures.
 
 We focus on the problem of temporal segmentation of a
-sequence of custom symbols that are created via on-line mouse gestures. Our work
+sequence of on-line mouse gestures that create custom symbols. Our work
 addresses one part of the larger problem of recognition of custom symbols, which
 is an important problem in law enforcement. The United States Federal Bureau of
 Investigation's Safe Streets and Gang Unit commonly encounters handwritten
