--- a/Proposal_Revision/document.tex
+++ b/Proposal_Revision/document.tex
@@ -121,7 +121,7 @@ similarities between our problem and approach.
 %Why does your approach make sense
 \section{Proposed Implementation}
 
-Our problem focuses on segmentation of user-defined gestures. As a result, we
+Our problem is segmentation of user-defined gestures. As a result, we
 cannot leverage grammar or other linguistic features, as was done successfully
 by Starner et al\cite{starner1994line}. Additionally, we cannot
 assume the existence of any markers that separate gestures, as is typically found in Chinese
