Minor grammar changes.

--- a/Proposal_Revision/document.tex
+++ b/Proposal_Revision/document.tex
@@ -98,6 +98,7 @@ through sign language due to partial paralysis or other similar conditions.
 Although a mouse may not be the most viable medium for such affected people to
 use to communicate with others, our work may be suitably enhanced/extended for
 more accessible mediums of interaction.
+%Our work addresses one part of the larger problem of recognition of custom symbols, which is an important problem in law enforcement. The United States Federal Bureau of Investigation's Safe Streets and Gang Unit commonly encounters handwritten communication involving custom symbols\cite{lyddane_donald_united_2006}. To our knowledge, this problem has not been addressed in the literature.
 
 \begin{comment}
 Our work addresses one part of the larger problem of recognition of custom handwritten symbols, which according to law enforcement is a common medium of communication among gangs\cite{lyddane_donald_united_2006}. To our
@@ -115,9 +116,9 @@ related to our problem and approach is focused on recognition of Chinese
 handwriting\cite{hong1998segmentation}. Hong et al use an iterative segmentation
 technique that uses whitespace separation to split character sequences into
 individual characters. Their approach is similar to ours, but their approach is
-intended to be suitable for both off-line and on-line recognition, and
-thus does not take advantage of the temporal data that we employ. To our
-knowledge, there is no directly comparable system in the literature; however, we
+intended to be suitable for both off-line and on-line recognition. As a result,
+their approach does not take advantage of the temporal data that we employ. To our
+knowledge, there is no directly comparable system in the literature. However, we
 will compare our results to those presented by Hong et
 al\cite{hong1998segmentation} due to the similarities between our problem and
 approach.
