Reverted to the societal impact related to identification of written gang communication.

--- a/Proposal_Revision/document.tex
+++ b/Proposal_Revision/document.tex
@@ -91,14 +91,15 @@ both in isolation and in sequence. Gesture recognition frequently involves
 solving two problems: segmentation of a gesture sequence and recognition of
 individual gestures.
 
-In our work, we focus on the problem of segmenting sequences of user-defined
-symbols created via mouse gestures. We strive to be part of a larger endeavor of
-developing a medium of communication for deaf people who are unable to interact
-through sign language due to partial paralysis or other similar conditions.
-Although a mouse may not be the most viable medium for such affected people to
-use to communicate with others, our work may be suitably enhanced/extended for
-more accessible mediums of interaction.
-%Our work addresses one part of the larger problem of recognition of custom symbols, which is an important problem in law enforcement. The United States Federal Bureau of Investigation's Safe Streets and Gang Unit commonly encounters handwritten communication involving custom symbols\cite{lyddane_donald_united_2006}. To our knowledge, this problem has not been addressed in the literature.
+In our work, we focus on the problem of segmenting sequences of user-defined (i.e., custom)
+symbols created via mouse gestures. Our work addresses one part of the larger
+problem of recognition of custom symbols, which is an important problem in law
+enforcement. The United States Federal Bureau of Investigation's Safe Streets
+and Gang Unit commonly encounters handwritten communication involving custom
+symbols\cite{lyddane_donald_united_2006}. To our knowledge, this problem has not
+been addressed in the literature.
+
+%We strive to be part of a larger endeavor of developing a medium of communication for deaf people who are unable to interact through sign language due to partial paralysis or other similar conditions. Although a mouse may not be the most viable medium for such affected people to use to communicate with others, our work may be suitably enhanced/extended for more accessible mediums of interaction.
 
 \begin{comment}
 Our work addresses one part of the larger problem of recognition of custom handwritten symbols, which according to law enforcement is a common medium of communication among gangs\cite{lyddane_donald_united_2006}. To our
